# fpha-spdnet

./: .gitignore  README.md  extract.sh  pyproject.toml  run-batch.sh  run.sh
configs/: reproduce-spdnet.yml  reproduce-uspdnet.yml  spdnet-bn.yml  spdnet.yml  u-spdnet-bn.yml  u-spdnet.yml
fpha_spdnet/: __main__.py  models.py
fpha_spdnet/data/: __init__.py  __main__.py
