[project]
name = "fpha-spdnet"
version = "0.1.0"
description = "Reproduction module for SPDNets on FPHA dataset."
authors = [{ name = "Riza Rizky", email = "zarizky77@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "lightning[pytorch-extra]==2.5.1.post0",
    "jsonargparse[all]==4.40.0",
    "pandas==2.2.3",
    "numpy==2.1.3",
    "scikit-learn==1.6.1",
    "h5py==3.14.0",
    "torch==2.7.0",
    "spd-net@git+https://github.com/zaRizk7/spd-net.git@main",
    "pre-commit==4.2.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["configs*"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
known_first_party = ["fpha_spdnet"]
profile = "black"
line_length = 120
force_sort_within_sections = true

[tool.flake8]
exclude = [".git", "__pycache__"]
ignore = ["E203", "E501", "W503", "F401", "F403", "F405"]
max-line-length = 120
# E203 - whitespace before ':'. Opposite convention enforced by black
# E501 - line too long. Long-line code is reformated by black; remaining long lines in docstrings are OK
# W503 - line break before binary operator. W503 is incompatible with PEP 8, don't use it
# F401 - unused '*' imports
# F403 - 'from module import *' used; unable to detect unused imports
# F405 - 'from module import name' used; unable to detect unused imports
